tests/invalid/det_errors.err_exp
det_errors.m:009: In `p1'(in):
det_errors.m:009:   error: determinism declaration not satisfied.
det_errors.m:009:   Declared `det', inferred `semidet'.
det_errors.m:042:   In argument 1 of clause head:
det_errors.m:042:   unification of `HeadVar__1' and `42' can fail.
det_errors.m:010: In `p2'(in):
det_errors.m:010:   error: determinism declaration not satisfied.
det_errors.m:010:   Declared `det', inferred `semidet'.
det_errors.m:043:   Unification of `X' and `42' can fail.
det_errors.m:011: In `p3'(in):
det_errors.m:011:   error: determinism declaration not satisfied.
det_errors.m:011:   Declared `det', inferred `semidet'.
det_errors.m:044:   Unification of `X' and `42' can fail.
det_errors.m:012: In `p4'(in):
det_errors.m:012:   error: determinism declaration not satisfied.
det_errors.m:012:   Declared `det', inferred `semidet'.
det_errors.m:045:   In argument 2 of functor `+/2':
det_errors.m:045:   unification with `21' can fail.
det_errors.m:026: In `q'(in, out):
det_errors.m:026:   error: determinism declaration not satisfied.
det_errors.m:026:   Declared `det', inferred `semidet'.
det_errors.m:048:   The switch on HeadVar__1 does not cover `det_errors.d'/0,
det_errors.m:048:   `det_errors.e'/0, `det_errors.f'/0, `det_errors.g'/0,
det_errors.m:048:   `det_errors.h'/1 or `det_errors.i'/1.
det_errors.m:034: In `r'(in, out):
det_errors.m:034:   error: determinism declaration not satisfied.
det_errors.m:034:   Declared `det', inferred `nondet'.
det_errors.m:054:   Inside the case u3(V_16) of the switch on U:
det_errors.m:054:   The switch on V_16 does not cover `det_errors.d'/0,
det_errors.m:054:   `det_errors.e'/0, `det_errors.f'/0, `det_errors.g'/0,
det_errors.m:054:   `det_errors.h'/1 or `det_errors.i'/1.
det_errors.m:054:   Inside the case u4(V_17) of the switch on U:
det_errors.m:054:   inside the case d/0 of the switch on V_17:
det_errors.m:054:   disjunction has multiple clauses with solutions.
det_errors.m:054:   Inside the case u4(V_17) of the switch on U:
det_errors.m:054:   The switch on V_17 does not cover `det_errors.h'/1 or
det_errors.m:054:   `det_errors.i'/1.
det_errors.m:054:   The switch on U does not cover `det_errors.u2'/0.
det_errors.m:035: In `s'(in, out):
det_errors.m:035:   error: determinism declaration not satisfied.
det_errors.m:035:   Declared `det', inferred `nondet'.
det_errors.m:093:   Inside the case u3(V_11) of the switch on U:
det_errors.m:093:   The switch on V_11 does not cover `det_errors.d'/0,
det_errors.m:093:   `det_errors.e'/0, `det_errors.f'/0, `det_errors.g'/0,
det_errors.m:093:   `det_errors.h'/1 or `det_errors.i'/1.
det_errors.m:093:   The switch on U does not cover `det_errors.u2'/0.
det_errors.m:109:   Inside the case u4(V) of the switch on U:
det_errors.m:109:   inside the case d/0 of the switch on V:
det_errors.m:109:   disjunction has multiple clauses with solutions.
det_errors.m:124:   Inside the case u4(V) of the switch on U:
det_errors.m:124:   inside the case e/0, f/0 of the switch on V:
det_errors.m:124:   disjunction has multiple clauses with solutions.
det_errors.m:134:   Inside the case u4(V) of the switch on U:
det_errors.m:134:   inside the case h/1, i/1 of the switch on V:
det_errors.m:134:   disjunction has multiple clauses with solutions.
